--- a/capstoneExtentReportIOS.html
+++ b/capstoneExtentReportIOS.html
@@ -53,7 +53,7 @@
 					<i class='mdi-hardware-desktop-windows'></i>
 				</li>
 				<li>
-					<span class='suite-started-time'>2023-05-13 17:01:13</span>
+					<span class='suite-started-time'>2023-05-15 12:14:35</span>
 				</li>
 				<li>
 					<span>v2.41.1</span>
@@ -83,25 +83,25 @@
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-current'> 
 							<span class='panel-name'>Total Time Taken (Current Run)</span> 
-							<span class='suite-total-time-current-value panel-lead'>0h 1m 1s+661ms</span> 
+							<span class='suite-total-time-current-value panel-lead'>0h 8m 9s+36ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-overall'> 
 							<span class='panel-name'>Total Time Taken (Overall)</span> 
-							<span class='suite-total-time-overall-value panel-lead'>0h 1m 1s+661ms</span> 
+							<span class='suite-total-time-overall-value panel-lead'>0h 8m 9s+36ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-start-time'>
 						<div class='card accent green-accent'> 
 							<span class='panel-name'>Start</span> 
-							<span class='panel-lead suite-started-time'>2023-05-13 17:00:11</span> 
+							<span class='panel-lead suite-started-time'>2023-05-15 12:06:26</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-end-time'>
 						<div class='card accent pink-accent'> 
 							<span class='panel-name'>End</span> 
-							<span class='panel-lead suite-ended-time'>2023-05-13 17:01:13</span> 
+							<span class='panel-lead suite-ended-time'>2023-05-15 12:14:35</span> 
 						</div> 
 					</div>
 				</div>
@@ -237,7 +237,7 @@
 						<div class='card-panel no-padding-h no-padding-v no-margin-v'>
 							<div class='wrapper'>
 								<ul id='test-collection' class='test-collection'>
-										<li class='collection-item test displayed active fail ' extentid='2eab1e69-f2d8-44a5-92e2-8a3ed02752b2'>
+										<li class='collection-item test displayed active fail ' extentid='2ab9ab04-5387-4ac5-9ab1-e9c3c8006860'>
 											<div class='test-head'>
 												<span class='test-name'>captone_test </span>
 												<span class='test-status label right outline capitalize fail'>fail</span>
@@ -245,9 +245,9 @@
 											</div>
 											<div class='test-body'>
 												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2023-05-13 17:00:11</span>
-													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2023-05-13 17:01:13</span>
-													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 1m 1s+491ms</span>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2023-05-15 12:06:26</span>
+													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2023-05-15 12:14:35</span>
+													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 8m 8s+885ms</span>
 												</div>
 												<div class='test-desc'></div>
 												<div class='test-attributes'>
@@ -265,56 +265,64 @@
 														<tbody>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>17:00:12</td>
-																		<td class='step-name'>click on Loan and EMI passed</td>
-																	<td class='step-details'>success</td>
-																</tr>
-																<tr>
-																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>17:00:32</td>
-																		<td class='step-name'>passed: no options under loan and emi displayed</td>
+																	<td class='timestamp'>12:06:27</td>
+																		<td class='step-name'>croll page success</td>
 																	<td class='step-details'>success</td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>17:00:33</td>
-																	<td class='step-details'>options displayed</td>
+																	<td class='timestamp'>12:06:28</td>
+																	<td class='step-details'>available options:19</td>
 																</tr>
 																<tr>
 																	<td class='status fail' title='fail' alt='fail'><i class='mdi-navigation-cancel'></i></td>
-																	<td class='timestamp'>17:00:40</td>
-																		<td class='step-name'>Validation failed: fields are not cleared</td>
-																	<td class='step-details'>failed</td>
+																	<td class='timestamp'>12:07:17</td>
+																	<td class='step-details'>failed: Date and Year picker is disabled</td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>17:00:43</td>
-																		<td class='step-name'>Validation passed: yearly data is displayed</td>
-																	<td class='step-details'>success</td>
+																	<td class='timestamp'>12:07:39</td>
+																	<td class='step-details'>passed: image is displayed</td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>17:00:43</td>
-																		<td class='step-name'>Validation passed: monthly data is displayed</td>
-																	<td class='step-details'>success</td>
+																	<td class='timestamp'>12:08:01</td>
+																	<td class='step-details'>passed: Color1 change is validated. dot state changed</td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>17:00:44</td>
-																		<td class='step-name'>Validation passed: chart data is displayed</td>
-																	<td class='step-details'>success</td>
+																	<td class='timestamp'>12:08:02</td>
+																	<td class='step-details'>passed: Color2 change is validated. dot state changed</td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>17:00:52</td>
-																		<td class='step-name'>Validation passed: monthly EMI data is displayed</td>
-																	<td class='step-details'>success</td>
+																	<td class='timestamp'>12:08:26</td>
+																	<td class='step-details'>validation passed: color changed.</td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>17:01:13</td>
-																		<td class='step-name'>Validation passed: results are cleared</td>
-																	<td class='step-details'>success</td>
+																	<td class='timestamp'>12:08:54</td>
+																	<td class='step-details'>passed: progress has incread over time.</td>
+																</tr>
+																<tr>
+																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
+																	<td class='timestamp'>12:11:13</td>
+																	<td class='step-details'>passed: further details is displayed/present</td>
+																</tr>
+																<tr>
+																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
+																	<td class='timestamp'>12:14:08</td>
+																	<td class='step-details'>passed: HTML content found</td>
+																</tr>
+																<tr>
+																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
+																	<td class='timestamp'>12:14:33</td>
+																	<td class='step-details'>passed: HTML content found</td>
+																</tr>
+																<tr>
+																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
+																	<td class='timestamp'>12:14:33</td>
+																	<td class='step-details'>passed: title contails A Short Title Is Best</td>
 																</tr>
 														</tbody>
 													</table>
