--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,14 +1,40 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e3bcd9">  <td>23/05/15 16:26:51</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScenarios_AndroidPhone.Fin_01()[pri:1, instance:capstone_TestScenarios.TestScenarios_AndroidPhone@16eb3ea3]">Fin_01</td> 
-  <td>main@1125964210</td>   <td></td> </tr>
-<tr bgcolor="e3bcd9">  <td>23/05/15 16:27:13</td>   <td>21409</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScenarios_AndroidPhone.Fin_02()[pri:2, instance:capstone_TestScenarios.TestScenarios_AndroidPhone@16eb3ea3]">Fin_02</td> 
-  <td>main@1125964210</td>   <td></td> </tr>
-<tr bgcolor="e3bcd9">  <td>23/05/15 16:27:25</td>   <td>33623</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScenarios_AndroidPhone.Fin_03()[pri:3, instance:capstone_TestScenarios.TestScenarios_AndroidPhone@16eb3ea3]">Fin_03</td> 
-  <td>main@1125964210</td>   <td></td> </tr>
-<tr bgcolor="e3bcd9">  <td>23/05/15 16:27:55</td>   <td>63383</td> <td title="&lt;&lt;TestScenarios_AndroidPhone.closeDriver()[pri:0, instance:capstone_TestScenarios.TestScenarios_AndroidPhone@16eb3ea3]">&lt;&lt;closeDriver</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1125964210</td>   <td></td> </tr>
-<tr bgcolor="e3bcd9">  <td>23/05/15 16:26:45</td>   <td>-6278</td> <td title="&gt;&gt;TestScenarios_AndroidPhone.iFiniboLaunch()[pri:0, instance:capstone_TestScenarios.TestScenarios_AndroidPhone@16eb3ea3]">&gt;&gt;iFiniboLaunch</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1125964210</td>   <td></td> </tr>
+<tr bgcolor="e3bcd9">  <td>23/05/18 09:29:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScenarios_IOSPhone.UI_01()[pri:1, instance:capstone_TestScenarios.TestScenarios_IOSPhone@14028087]">UI_01</td> 
+  <td>main@1848125895</td>   <td></td> </tr>
+<tr bgcolor="e3bcd9">  <td>23/05/18 09:29:40</td>   <td>3404</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScenarios_IOSPhone.UI_02()[pri:2, instance:capstone_TestScenarios.TestScenarios_IOSPhone@14028087]">UI_02</td> 
+  <td>main@1848125895</td>   <td></td> </tr>
+<tr bgcolor="e3bcd9">  <td>23/05/18 09:29:41</td>   <td>4692</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScenarios_IOSPhone.UI_03()[pri:3, instance:capstone_TestScenarios.TestScenarios_IOSPhone@14028087]">UI_03</td> 
+  <td>main@1848125895</td>   <td></td> </tr>
+<tr bgcolor="e3bcd9">  <td>23/05/18 09:30:07</td>   <td>30793</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScenarios_IOSPhone.UI_04()[pri:4, instance:capstone_TestScenarios.TestScenarios_IOSPhone@14028087]">UI_04</td> 
+  <td>main@1848125895</td>   <td></td> </tr>
+<tr bgcolor="e3bcd9">  <td>23/05/18 09:30:09</td>   <td>33243</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScenarios_IOSPhone.UI_05()[pri:5, instance:capstone_TestScenarios.TestScenarios_IOSPhone@14028087]">UI_05</td> 
+  <td>main@1848125895</td>   <td></td> </tr>
+<tr bgcolor="e3bcd9">  <td>23/05/18 09:30:12</td>   <td>36273</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScenarios_IOSPhone.UI_06()[pri:6, instance:capstone_TestScenarios.TestScenarios_IOSPhone@14028087]">UI_06</td> 
+  <td>main@1848125895</td>   <td></td> </tr>
+<tr bgcolor="e3bcd9">  <td>23/05/18 09:30:17</td>   <td>40745</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScenarios_IOSPhone.UI_07()[pri:7, instance:capstone_TestScenarios.TestScenarios_IOSPhone@14028087]">UI_07</td> 
+  <td>main@1848125895</td>   <td></td> </tr>
+<tr bgcolor="e3bcd9">  <td>23/05/18 09:30:24</td>   <td>48368</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScenarios_IOSPhone.UI_08()[pri:8, instance:capstone_TestScenarios.TestScenarios_IOSPhone@14028087]">UI_08</td> 
+  <td>main@1848125895</td>   <td></td> </tr>
+<tr bgcolor="e3bcd9">  <td>23/05/18 09:30:33</td>   <td>57040</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScenarios_IOSPhone.UI_09()[pri:9, instance:capstone_TestScenarios.TestScenarios_IOSPhone@14028087]">UI_09</td> 
+  <td>main@1848125895</td>   <td></td> </tr>
+<tr bgcolor="e3bcd9">  <td>23/05/18 09:30:38</td>   <td>62342</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScenarios_IOSPhone.UI_10()[pri:10, instance:capstone_TestScenarios.TestScenarios_IOSPhone@14028087]">UI_10</td> 
+  <td>main@1848125895</td>   <td></td> </tr>
+<tr bgcolor="e3bcd9">  <td>23/05/18 09:30:43</td>   <td>67315</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScenarios_IOSPhone.UI_11()[pri:11, instance:capstone_TestScenarios.TestScenarios_IOSPhone@14028087]">UI_11</td> 
+  <td>main@1848125895</td>   <td></td> </tr>
+<tr bgcolor="e3bcd9">  <td>23/05/18 09:30:47</td>   <td>71248</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScenarios_IOSPhone.UI_12()[pri:12, instance:capstone_TestScenarios.TestScenarios_IOSPhone@14028087]">UI_12</td> 
+  <td>main@1848125895</td>   <td></td> </tr>
+<tr bgcolor="e3bcd9">  <td>23/05/18 09:30:50</td>   <td>73779</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScenarios_IOSPhone.UI_13()[pri:13, instance:capstone_TestScenarios.TestScenarios_IOSPhone@14028087]">UI_13</td> 
+  <td>main@1848125895</td>   <td></td> </tr>
+<tr bgcolor="e3bcd9">  <td>23/05/18 09:31:08</td>   <td>91981</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScenarios_IOSPhone.UI_14()[pri:14, instance:capstone_TestScenarios.TestScenarios_IOSPhone@14028087]">UI_14</td> 
+  <td>main@1848125895</td>   <td></td> </tr>
+<tr bgcolor="e3bcd9">  <td>23/05/18 09:31:13</td>   <td>97182</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScenarios_IOSPhone.UI_15()[pri:15, instance:capstone_TestScenarios.TestScenarios_IOSPhone@14028087]">UI_15</td> 
+  <td>main@1848125895</td>   <td></td> </tr>
+<tr bgcolor="e3bcd9">  <td>23/05/18 09:31:19</td>   <td>102409</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScenarios_IOSPhone.UI_16()[pri:16, instance:capstone_TestScenarios.TestScenarios_IOSPhone@14028087]">UI_16</td> 
+  <td>main@1848125895</td>   <td></td> </tr>
+<tr bgcolor="e3bcd9">  <td>23/05/18 09:31:24</td>   <td>108311</td> <td title="&lt;&lt;TestScenarios_IOSPhone.closeDriver()[pri:0, instance:capstone_TestScenarios.TestScenarios_IOSPhone@14028087]">&lt;&lt;closeDriver</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1848125895</td>   <td></td> </tr>
+<tr bgcolor="e3bcd9">  <td>23/05/18 09:29:29</td>   <td>-6709</td> <td title="&gt;&gt;TestScenarios_IOSPhone.launchUIKitCatalog()[pri:0, instance:capstone_TestScenarios.TestScenarios_IOSPhone@14028087]">&gt;&gt;launchUIKitCatalog</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1848125895</td>   <td></td> </tr>
 </table>
