--- a/test-output/old/Default suite/reporter-output.html
+++ b/test-output/old/Default suite/reporter-output.html
@@ -1,1 +1,10 @@
-<h2>Reporter output</h2><table></table>
+<h2>Reporter output</h2><table><tr><td>launched UIKitCatalog</td></tr>
+<tr><td>validation failed: Date and year picker is disabled</td></tr>
+<tr><td>validation passed: image is displayed</td></tr>
+<tr><td>validation passed: color changed</td></tr>
+<tr><td>validation passed: progress has incread over time.</td></tr>
+<tr><td>validation passed: further details is displayed/present</td></tr>
+<tr><td>validation passed: HTML content found</td></tr>
+<tr><td>validation passed: alertbox found</td></tr>
+<tr><td>validation passed: title contails A Short Title Is Best</td></tr>
+</table>
