--- a/capstoneExtentReportIOS.html
+++ b/capstoneExtentReportIOS.html
@@ -53,7 +53,7 @@
 					<i class='mdi-hardware-desktop-windows'></i>
 				</li>
 				<li>
-					<span class='suite-started-time'>2023-05-15 12:14:35</span>
+					<span class='suite-started-time'>2023-05-18 09:31:25</span>
 				</li>
 				<li>
 					<span>v2.41.1</span>
@@ -83,25 +83,25 @@
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-current'> 
 							<span class='panel-name'>Total Time Taken (Current Run)</span> 
-							<span class='suite-total-time-current-value panel-lead'>0h 8m 9s+36ms</span> 
+							<span class='suite-total-time-current-value panel-lead'>0h 1m 48s+217ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-overall'> 
 							<span class='panel-name'>Total Time Taken (Overall)</span> 
-							<span class='suite-total-time-overall-value panel-lead'>0h 8m 9s+36ms</span> 
+							<span class='suite-total-time-overall-value panel-lead'>0h 1m 48s+217ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-start-time'>
 						<div class='card accent green-accent'> 
 							<span class='panel-name'>Start</span> 
-							<span class='panel-lead suite-started-time'>2023-05-15 12:06:26</span> 
+							<span class='panel-lead suite-started-time'>2023-05-18 09:29:36</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-end-time'>
 						<div class='card accent pink-accent'> 
 							<span class='panel-name'>End</span> 
-							<span class='panel-lead suite-ended-time'>2023-05-15 12:14:35</span> 
+							<span class='panel-lead suite-ended-time'>2023-05-18 09:31:25</span> 
 						</div> 
 					</div>
 				</div>
@@ -237,7 +237,7 @@
 						<div class='card-panel no-padding-h no-padding-v no-margin-v'>
 							<div class='wrapper'>
 								<ul id='test-collection' class='test-collection'>
-										<li class='collection-item test displayed active fail ' extentid='2ab9ab04-5387-4ac5-9ab1-e9c3c8006860'>
+										<li class='collection-item test displayed active fail ' extentid='66d76e0e-2f65-461e-b1d5-d61f644df79f'>
 											<div class='test-head'>
 												<span class='test-name'>captone_test </span>
 												<span class='test-status label right outline capitalize fail'>fail</span>
@@ -245,9 +245,9 @@
 											</div>
 											<div class='test-body'>
 												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2023-05-15 12:06:26</span>
-													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2023-05-15 12:14:35</span>
-													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 8m 8s+885ms</span>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2023-05-18 09:29:36</span>
+													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2023-05-18 09:31:24</span>
+													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 1m 48s+89ms</span>
 												</div>
 												<div class='test-desc'></div>
 												<div class='test-attributes'>
@@ -258,71 +258,104 @@
 															<tr>
 																<th>Status</th>
 																<th>Timestamp</th>
-																	<th>StepName</th>
 																<th>Details</th>
 															</tr>
 														</thead>
 														<tbody>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>12:06:27</td>
-																		<td class='step-name'>croll page success</td>
-																	<td class='step-details'>success</td>
+																	<td class='timestamp'>09:29:38</td>
+																	<td class='step-details'>Scroll page success<a href='/Users/collabera/eclipse-workspace/capstoneProj/IOSTestScreenshots/ScreenShots20230518092938.png' data-featherlight='image'><img class='report-img' src='file:////Users/collabera/eclipse-workspace/capstoneProj/IOSTestScreenshots/ScreenShots20230518092938.png' /></a></td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>12:06:28</td>
-																	<td class='step-details'>available options:19</td>
+																	<td class='timestamp'>09:29:40</td>
+																	<td class='step-details'>available options:18<a href='/Users/collabera/eclipse-workspace/capstoneProj/IOSTestScreenshots/ScreenShots20230518092939.png' data-featherlight='image'><img class='report-img' src='file:////Users/collabera/eclipse-workspace/capstoneProj/IOSTestScreenshots/ScreenShots20230518092939.png' /></a></td>
 																</tr>
 																<tr>
 																	<td class='status fail' title='fail' alt='fail'><i class='mdi-navigation-cancel'></i></td>
-																	<td class='timestamp'>12:07:17</td>
-																	<td class='step-details'>failed: Date and Year picker is disabled</td>
+																	<td class='timestamp'>09:30:07</td>
+																	<td class='step-details'>Date and Year picker is disabled<a href='/Users/collabera/eclipse-workspace/capstoneProj/IOSTestScreenshots/ScreenShots20230518093007.png' data-featherlight='image'><img class='report-img' src='file:////Users/collabera/eclipse-workspace/capstoneProj/IOSTestScreenshots/ScreenShots20230518093007.png' /></a></td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>12:07:39</td>
-																	<td class='step-details'>passed: image is displayed</td>
+																	<td class='timestamp'>09:30:09</td>
+																	<td class='step-details'>image is displayed<a href='/Users/collabera/eclipse-workspace/capstoneProj/IOSTestScreenshots/ScreenShots20230518093009.png' data-featherlight='image'><img class='report-img' src='file:////Users/collabera/eclipse-workspace/capstoneProj/IOSTestScreenshots/ScreenShots20230518093009.png' /></a></td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>12:08:01</td>
-																	<td class='step-details'>passed: Color1 change is validated. dot state changed</td>
+																	<td class='timestamp'>09:30:12</td>
+																	<td class='step-details'>Color1 is changed and dot state change<a href='/Users/collabera/eclipse-workspace/capstoneProj/IOSTestScreenshots/ScreenShots20230518093012.png' data-featherlight='image'><img class='report-img' src='file:////Users/collabera/eclipse-workspace/capstoneProj/IOSTestScreenshots/ScreenShots20230518093012.png' /></a></td>
+																</tr>
+																<tr>
+																	<td class='status fail' title='fail' alt='fail'><i class='mdi-navigation-cancel'></i></td>
+																	<td class='timestamp'>09:30:12</td>
+																	<td class='step-details'>Color2 is changed and dot state changed<a href='/Users/collabera/eclipse-workspace/capstoneProj/IOSTestScreenshots/ScreenShots20230518093012.png' data-featherlight='image'><img class='report-img' src='file:////Users/collabera/eclipse-workspace/capstoneProj/IOSTestScreenshots/ScreenShots20230518093012.png' /></a></td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>12:08:02</td>
-																	<td class='step-details'>passed: Color2 change is validated. dot state changed</td>
+																	<td class='timestamp'>09:30:17</td>
+																	<td class='step-details'>Color changed<a href='/Users/collabera/eclipse-workspace/capstoneProj/IOSTestScreenshots/ScreenShots20230518093017.png' data-featherlight='image'><img class='report-img' src='file:////Users/collabera/eclipse-workspace/capstoneProj/IOSTestScreenshots/ScreenShots20230518093017.png' /></a></td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>12:08:26</td>
-																	<td class='step-details'>validation passed: color changed.</td>
+																	<td class='timestamp'>09:30:24</td>
+																	<td class='step-details'>Progress bar has increased over time<a href='/Users/collabera/eclipse-workspace/capstoneProj/IOSTestScreenshots/ScreenShots20230518093024.png' data-featherlight='image'><img class='report-img' src='file:////Users/collabera/eclipse-workspace/capstoneProj/IOSTestScreenshots/ScreenShots20230518093024.png' /></a></td>
+																</tr>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>09:30:33</td>
+																	<td class='step-details'>Search bar validated<a href='/Users/collabera/eclipse-workspace/capstoneProj/IOSTestScreenshots/ScreenShots20230518093033.png' data-featherlight='image'><img class='report-img' src='file:////Users/collabera/eclipse-workspace/capstoneProj/IOSTestScreenshots/ScreenShots20230518093033.png' /></a></td>
+																</tr>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>09:30:38</td>
+																	<td class='step-details'>Segmented Controls validated<a href='/Users/collabera/eclipse-workspace/capstoneProj/IOSTestScreenshots/ScreenShots20230518093038.png' data-featherlight='image'><img class='report-img' src='file:////Users/collabera/eclipse-workspace/capstoneProj/IOSTestScreenshots/ScreenShots20230518093038.png' /></a></td>
+																</tr>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>09:30:43</td>
+																	<td class='step-details'>Sliders validated<a href='/Users/collabera/eclipse-workspace/capstoneProj/IOSTestScreenshots/ScreenShots20230518093043.png' data-featherlight='image'><img class='report-img' src='file:////Users/collabera/eclipse-workspace/capstoneProj/IOSTestScreenshots/ScreenShots20230518093043.png' /></a></td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>12:08:54</td>
-																	<td class='step-details'>passed: progress has incread over time.</td>
+																	<td class='timestamp'>09:30:46</td>
+																	<td class='step-details'>Further details is displayed<a href='/Users/collabera/eclipse-workspace/capstoneProj/IOSTestScreenshots/ScreenShots20230518093046.png' data-featherlight='image'><img class='report-img' src='file:////Users/collabera/eclipse-workspace/capstoneProj/IOSTestScreenshots/ScreenShots20230518093046.png' /></a></td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>12:11:13</td>
-																	<td class='step-details'>passed: further details is displayed/present</td>
+																	<td class='timestamp'>09:30:47</td>
+																	<td class='step-details'>Box is displayed<a href='/Users/collabera/eclipse-workspace/capstoneProj/IOSTestScreenshots/ScreenShots20230518093047.png' data-featherlight='image'><img class='report-img' src='file:////Users/collabera/eclipse-workspace/capstoneProj/IOSTestScreenshots/ScreenShots20230518093047.png' /></a></td>
+																</tr>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>09:30:50</td>
+																	<td class='step-details'>switches<a href='/Users/collabera/eclipse-workspace/capstoneProj/IOSTestScreenshots/ScreenShots20230518093050.png' data-featherlight='image'><img class='report-img' src='file:////Users/collabera/eclipse-workspace/capstoneProj/IOSTestScreenshots/ScreenShots20230518093050.png' /></a></td>
+																</tr>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>09:31:08</td>
+																	<td class='step-details'>all text fields validated<a href='/Users/collabera/eclipse-workspace/capstoneProj/IOSTestScreenshots/ScreenShots20230518093108.png' data-featherlight='image'><img class='report-img' src='file:////Users/collabera/eclipse-workspace/capstoneProj/IOSTestScreenshots/ScreenShots20230518093108.png' /></a></td>
+																</tr>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>09:31:13</td>
+																	<td class='step-details'>Toolbars validated<a href='/Users/collabera/eclipse-workspace/capstoneProj/IOSTestScreenshots/ScreenShots20230518093113.png' data-featherlight='image'><img class='report-img' src='file:////Users/collabera/eclipse-workspace/capstoneProj/IOSTestScreenshots/ScreenShots20230518093113.png' /></a></td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>12:14:08</td>
-																	<td class='step-details'>passed: HTML content found</td>
+																	<td class='timestamp'>09:31:19</td>
+																	<td class='step-details'>HTML content found<a href='/Users/collabera/eclipse-workspace/capstoneProj/IOSTestScreenshots/ScreenShots20230518093118.png' data-featherlight='image'><img class='report-img' src='file:////Users/collabera/eclipse-workspace/capstoneProj/IOSTestScreenshots/ScreenShots20230518093118.png' /></a></td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>12:14:33</td>
-																	<td class='step-details'>passed: HTML content found</td>
+																	<td class='timestamp'>09:31:23</td>
+																	<td class='step-details'>Alertbox found<a href='/Users/collabera/eclipse-workspace/capstoneProj/IOSTestScreenshots/ScreenShots20230518093123.png' data-featherlight='image'><img class='report-img' src='file:////Users/collabera/eclipse-workspace/capstoneProj/IOSTestScreenshots/ScreenShots20230518093123.png' /></a></td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>12:14:33</td>
-																	<td class='step-details'>passed: title contails A Short Title Is Best</td>
+																	<td class='timestamp'>09:31:24</td>
+																	<td class='step-details'>title contains:A Short Title Is Best<a href='/Users/collabera/eclipse-workspace/capstoneProj/IOSTestScreenshots/ScreenShots20230518093123.png' data-featherlight='image'><img class='report-img' src='file:////Users/collabera/eclipse-workspace/capstoneProj/IOSTestScreenshots/ScreenShots20230518093123.png' /></a></td>
 																</tr>
 														</tbody>
 													</table>
