--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,12 +9,47 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">63,360</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">16</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">108,304</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">capstone_TestScenarios.TestScenarios_AndroidPhone</td><td><a href="#m0">Fin_01</a></td><td rowspan="1">1684139211798</td><td rowspan="1">21406</td></tr><tr class="passedeven"><td><a href="#m1">Fin_02</a></td><td rowspan="1">1684139233207</td><td rowspan="1">12213</td></tr><tr class="passedeven"><td><a href="#m2">Fin_03</a></td><td rowspan="1">1684139245421</td><td rowspan="1">29715</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; failed (configuration methods)</th></tr><tr class="failedeven"><td rowspan="1">capstone_TestScenarios.TestScenarios_IOSPhone</td><td><a href="#m0">closeDriver</a></td><td rowspan="1">1684373484920</td><td rowspan="1">98</td></tr><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="16">capstone_TestScenarios.TestScenarios_IOSPhone</td><td><a href="#m1">UI_01</a></td><td rowspan="1">1684373376609</td><td rowspan="1">3400</td></tr><tr class="passedeven"><td><a href="#m2">UI_02</a></td><td rowspan="1">1684373380013</td><td rowspan="1">1286</td></tr><tr class="passedeven"><td><a href="#m3">UI_03</a></td><td rowspan="1">1684373381301</td><td rowspan="1">26100</td></tr><tr class="passedeven"><td><a href="#m4">UI_04</a></td><td rowspan="1">1684373407402</td><td rowspan="1">2449</td></tr><tr class="passedeven"><td><a href="#m5">UI_05</a></td><td rowspan="1">1684373409852</td><td rowspan="1">3029</td></tr><tr class="passedeven"><td><a href="#m6">UI_06</a></td><td rowspan="1">1684373412882</td><td rowspan="1">4470</td></tr><tr class="passedeven"><td><a href="#m7">UI_07</a></td><td rowspan="1">1684373417354</td><td rowspan="1">7622</td></tr><tr class="passedeven"><td><a href="#m8">UI_08</a></td><td rowspan="1">1684373424977</td><td rowspan="1">8672</td></tr><tr class="passedeven"><td><a href="#m9">UI_09</a></td><td rowspan="1">1684373433649</td><td rowspan="1">5301</td></tr><tr class="passedeven"><td><a href="#m10">UI_10</a></td><td rowspan="1">1684373438951</td><td rowspan="1">4972</td></tr><tr class="passedeven"><td><a href="#m11">UI_11</a></td><td rowspan="1">1684373443924</td><td rowspan="1">3932</td></tr><tr class="passedeven"><td><a href="#m12">UI_12</a></td><td rowspan="1">1684373447857</td><td rowspan="1">2529</td></tr><tr class="passedeven"><td><a href="#m13">UI_13</a></td><td rowspan="1">1684373450388</td><td rowspan="1">18201</td></tr><tr class="passedeven"><td><a href="#m14">UI_14</a></td><td rowspan="1">1684373468590</td><td rowspan="1">5199</td></tr><tr class="passedeven"><td><a href="#m15">UI_15</a></td><td rowspan="1">1684373473791</td><td rowspan="1">5226</td></tr><tr class="passedeven"><td><a href="#m16">UI_16</a></td><td rowspan="1">1684373479018</td><td rowspan="1">5876</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">capstone_TestScenarios.TestScenarios_AndroidPhone#Fin_01</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">capstone_TestScenarios.TestScenarios_AndroidPhone#Fin_02</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">capstone_TestScenarios.TestScenarios_AndroidPhone#Fin_03</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">capstone_TestScenarios.TestScenarios_IOSPhone#closeDriver</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.NullPointerException
+	at capstone_TestScenarios.TestScenarios_IOSPhone.closeDriver(TestScenarios_IOSPhone.java:128)
+	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
+	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
+	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
+	at java.base/java.lang.reflect.Method.invoke(Method.java:566)
+	at org.testng.internal.invokers.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:139)
+	at org.testng.internal.invokers.MethodInvocationHelper.invokeMethodConsideringTimeout(MethodInvocationHelper.java:69)
+	at org.testng.internal.invokers.ConfigInvoker.invokeConfigurationMethod(ConfigInvoker.java:361)
+	at org.testng.internal.invokers.ConfigInvoker.invokeConfigurations(ConfigInvoker.java:296)
+	at org.testng.SuiteRunner.privateRun(SuiteRunner.java:404)
+	at org.testng.SuiteRunner.run(SuiteRunner.java:330)
+	at org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:52)
+	at org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:95)
+	at org.testng.TestNG.runSuitesSequentially(TestNG.java:1256)
+	at org.testng.TestNG.runSuitesLocally(TestNG.java:1176)
+	at org.testng.TestNG.runSuites(TestNG.java:1099)
+	at org.testng.TestNG.run(TestNG.java:1067)
+	at org.testng.remote.AbstractRemoteTestNG.run(AbstractRemoteTestNG.java:115)
+	at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:251)
+	at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:77)
+</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">capstone_TestScenarios.TestScenarios_IOSPhone#UI_01</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">capstone_TestScenarios.TestScenarios_IOSPhone#UI_02</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">capstone_TestScenarios.TestScenarios_IOSPhone#UI_03</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">validation failed: Date and year picker is disabled</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">capstone_TestScenarios.TestScenarios_IOSPhone#UI_04</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">validation passed: image is displayed</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m5">capstone_TestScenarios.TestScenarios_IOSPhone#UI_05</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m6">capstone_TestScenarios.TestScenarios_IOSPhone#UI_06</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">validation passed: color changed</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m7">capstone_TestScenarios.TestScenarios_IOSPhone#UI_07</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">validation passed: progress has incread over time.</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m8">capstone_TestScenarios.TestScenarios_IOSPhone#UI_08</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m9">capstone_TestScenarios.TestScenarios_IOSPhone#UI_09</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m10">capstone_TestScenarios.TestScenarios_IOSPhone#UI_10</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m11">capstone_TestScenarios.TestScenarios_IOSPhone#UI_11</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">validation passed: further details is displayed/present</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m12">capstone_TestScenarios.TestScenarios_IOSPhone#UI_12</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m13">capstone_TestScenarios.TestScenarios_IOSPhone#UI_13</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m14">capstone_TestScenarios.TestScenarios_IOSPhone#UI_14</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m15">capstone_TestScenarios.TestScenarios_IOSPhone#UI_15</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">validation passed: HTML content found</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m16">capstone_TestScenarios.TestScenarios_IOSPhone#UI_16</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">validation passed: alertbox found<br/>validation passed: title contails A Short Title Is Best</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
